gravitee-apim-console-webui/src/management/api/runtime-logs-v4/runtime-logs/components/api-runtime-logs-list-row/api-runtime-logs-list-row.component.scss
@use '@angular/material' as mat;
@use '@gravitee/ui-particles-angular' as gio;

.first {
  border-radius: 4px 4px 0 0;
}

.property {
  color: mat.get-color-from-palette(gio.$mat-space-palette, 'lighter40');
  white-space: nowrap;
  margin-right: 4px;
}

.value {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.cropable {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.line {
  display: flex;
  justify-items: center;
  height: 24px;
}

.log-row {
  display: flex;
  flex-direction: row;

  background-color: mat.get-color-from-palette(gio.$mat-basic-palette, white);
  padding: 16px 24px;

  &__left {
    display: flex;
    flex-direction: column;
  }

  &__line-1 {
    display: flex;

    font-weight: bold;
    margin-bottom: 8px;
  }

  &__line-2 {
    display: flex;
    flex-direction: row;
    justify-items: center;
    align-content: center;

    &__request {
      display: grid;
      grid-template-columns: 190px 300px 300px;
      grid-gap: 16px;
      row-gap: 4px;
    }

    &__data {
      display: flex;
      flex-direction: row;
    }
  }

  &__actions {
    display: flex;
    align-items: center;
  }
}

